kotlinx-benchmark-core/kotlinx-benchmark-plugin/src/test/resources/templates/invalid-target/js-d8/build.gradle
kotlin {
    js(IR) {
        d8()
    }
}

benchmark {
    targets {
        register("js")
    }
}
